Add Nova service password.
Another service converted to match the keystone model of unique
accounts per service.

Change-Id: I62fce289a7032138be3aca8c74df499c2b1fde28

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -34,6 +34,10 @@ Parameters:
     Default: ''
   NovaApiHost:
     Type: String
+  NovaPassword:
+    Default: unset
+    Description: The password for the nova service account, used by nova-api.
+    Type: String
   GlanceHost:
     Type: String
   NovaDSN:
@@ -98,6 +102,8 @@ Resources:
         compute_libvirt_type: {Ref: NovaComputeLibvirtType}
         db: {Ref: NovaDSN}
         host: {Ref: NovaApiHost}
+        service-password:
+          Ref: NovaPassword
       glance:
         host: {Ref: GlanceHost}
       keystone:
