--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -42,6 +42,10 @@ Parameters:
   NovaInterfaces:
     Default: eth0
     Type: String
+  NovaPassword:
+    Default: unset
+    Description: The password for the nova service account, used by nova-api.
+    Type: String
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
@@ -195,6 +199,8 @@ Resources:
             - notcompute
             - PrivateIp
         metadata-proxy: true
+        service-password:
+          Ref: NovaPassword
       neutron:
         host:
           Fn::GetAtt:
