--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -28,6 +28,10 @@ Parameters:
     Default: unset
     Description: The password for the neutron service account, used by neutron agents.
     Type: String
+  NovaPassword:
+    Default: unset
+    Description: The password for the nova service account, used by nova-api.
+    Type: String
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
@@ -133,6 +137,8 @@ Resources:
             key: /opt/stack/boot-stack/virtual-power-key
             ssh_host: 192.168.122.1
             type: virsh
+        service-password:
+          Ref: NovaPassword
       neutron:
         host: 127.0.0.1
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
