--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -1,6 +1,10 @@
 HeatTemplateFormatVersion: '2012-12-12'
 Description: 'Nova Compute'
 Parameters:
+  AdminPassword:
+    Default: unset
+    Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
+    Type: String
   KeyName: 
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
@@ -13,9 +17,6 @@ Parameters:
     Type: String
     Default: overcloud-compute
   KeystoneHost:
-    Type: String
-  ServicePassword:
-    Description: admin_password for setting up auth in nova.
     Type: String
   NeutronHost:
     Type: String
@@ -120,9 +121,7 @@ Resources:
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
           enable_tunneling: {Ref: NeutronEnableTunnelling}
-
-      service-password: {Ref: ServicePassword}
-      admin-password: {Ref: ServicePassword}
+      admin-password: {Ref: AdminPassword}
       rabbit:
         host: {Ref: RabbitHost}
         password: {Ref: RabbitPassword}
