Make Heat service password configurable.
So that it can be a snowflake! (unique).

Change-Id: Ic823620ace7df5636cd9ff16dcd7476654692e6c

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -22,6 +22,10 @@ Parameters:
     Default: unset
     Description: The password for the glance service account, used by the glance services.
     Type: String
+  HeatPassword:
+    Default: unset
+    Description: The password for the Heat service account, used by the Heat services.
+    Type: String
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -153,7 +157,8 @@ Resources:
           stack_name:
             Ref: AWS::StackName
       heat:
-        admin_password: unset
+        admin_password:
+          Ref: HeatPassword
         admin_tenant_name: service
         admin_user: heat
         auth_encryption_key: unset___________
