--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -21,6 +21,10 @@ Parameters:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
+  HeatPassword:
+    Default: unset
+    Description: The password for the Heat service account, used by the Heat services.
+    Type: String
   Image:
     Default: undercloud
     Type: String
@@ -78,7 +82,8 @@ Resources:
         service-password:
           Ref: GlancePassword
       heat:
-        admin_password: unset
+        admin_password:
+          Ref: HeatPassword
         admin_tenant_name: service
         admin_user: heat
         auth_encryption_key: unset___________
