Update undercloud-vm.yaml to use OS::Nova::Server
Change-Id: I34c294c62bf5da4c01d72931173c055c6a13706c

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -9,7 +9,7 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
-  InstanceType:
+  Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
     Type: String
@@ -149,15 +149,14 @@ Resources:
         store_key: unset
       service-password: unset
   notcompute:
-    Type: AWS::EC2::Instance
+    Type: OS::Nova::Server
     Properties:
-      ImageId:
+      image:
         Ref: Image
-      InstanceType:
-        Ref: InstanceType
-      KeyName:
+      flavor:
+        Ref: Flavor
+      key_name:
         Ref: KeyName
-    Type: AWS::EC2::Instance
     Metadata:
       os-collect-config:
         cfn:
