Use native resource for nova-compute-instance
Change-Id: I347465b32578467ca3d9f55ea2994d832fcd8b3f

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -5,7 +5,7 @@ Parameters:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
     Default: default
-  InstanceType:
+  Flavor:
     Description: Use this flavor
     Type: String
     Default: baremetal
@@ -63,12 +63,12 @@ Resources:
       UserName:
         Ref: ComputeUser
   NovaCompute0:
-    Type: AWS::EC2::Instance
+    Type: OS::Nova::Server
     Properties:
-      ImageId:
+      image:
         {Ref: NovaImage}
-      InstanceType: {Ref: InstanceType}
-      KeyName: {Ref: KeyName}
+      flavor: {Ref: Flavor}
+      key_name: {Ref: KeyName}
     Metadata:
       os-collect-config:
         cfn:
