Use native server resource in overcloud
Change-Id: I4745627508e8b6b687fc17527cdd3c41d09b0d80

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -10,7 +10,7 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
-  InstanceType:
+  Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
     Type: String
@@ -209,13 +209,13 @@ Resources:
         password: guest
       service-password: unset
   notcompute:
-    Type: AWS::EC2::Instance
+    Type: OS::Nova::Server
     Properties:
-      ImageId:
+      image:
         Ref: notcomputeImage
-      InstanceType:
-        Ref: InstanceType
-      KeyName:
+      flavor:
+        Ref: Flavor
+      key_name:
         Ref: KeyName
     Metadata:
       os-collect-config:
