Update PrivateIp to first_private_address.
Update the PrivateIp attribute to first_private_address as a result of
the change to the OS::Nova::Server type.

Change-Id: Id90f8c7c4e0217e1f94d3e5134744a810390e7b7

--- a/nagios3.yaml
+++ b/nagios3.yaml
@@ -97,4 +97,4 @@ Resources:
       InstanceType: {Ref: InstanceType}
 Outputs:
     Nagios3Host:
-        Fn::GetAtt: [ nagios3 , PrivateIp ]
+        Fn::GetAtt: [ nagios3 , first_private_address ]
