--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -116,7 +116,7 @@ Resources:
           local_ip:
             Fn::GetAtt:
               - NovaCompute0
-              - PrivateIp
+              - first_private_address
           tenant_network_type: {Ref: NeutronNetworkType}
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
