--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -90,13 +90,13 @@ Resources:
     Path: nova-compute-instance.yaml
     SubKey: Resources.NovaCompute0Config
     Parameters:
-        NovaApiHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        KeystoneHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        RabbitHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        NeutronHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        GlanceHost: {"Fn::GetAtt": [notcompute, PrivateIp]}
-        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::GetAtt": [notcompute, PrivateIp]}, '/nova']]}
-        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::GetAtt": [notcompute, PrivateIp]}, '/neutron']]}
+        NovaApiHost: {"Fn::GetAtt": [notcompute, first_private_address]}
+        KeystoneHost: {"Fn::GetAtt": [notcompute, first_private_address]}
+        RabbitHost: {"Fn::GetAtt": [notcompute, first_private_address]}
+        NeutronHost: {"Fn::GetAtt": [notcompute, first_private_address]}
+        GlanceHost: {"Fn::GetAtt": [notcompute, first_private_address]}
+        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::GetAtt": [notcompute, first_private_address]}, '/nova']]}
+        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::GetAtt": [notcompute, first_private_address]}, '/neutron']]}
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
         NeutronNetworkVLANRanges: ""
@@ -135,14 +135,14 @@ Resources:
       controller-address:
         Fn::GetAtt:
           - notcompute
-          - PrivateIp
+          - first_private_address
       db-password: unset
       glance:
         db: mysql://glance:unset@localhost/glance
         host:
           Fn::GetAtt:
             - notcompute
-            - PrivateIp
+            - first_private_address
         service-password:
           Ref: GlancePassword
       os-collect-config:
@@ -169,7 +169,7 @@ Resources:
             - - 'http://'
               - Fn::GetAtt:
                   - notcompute
-                  - PrivateIp
+                  - first_private_address
               - ':8003'
         metadata_server_url:
           Fn::Join:
@@ -177,7 +177,7 @@ Resources:
             - - 'http://'
               - Fn::GetAtt:
                   - notcompute
-                  - PrivateIp
+                  - first_private_address
               - ':8000'
         waitcondition_server_url:
           Fn::Join:
@@ -185,7 +185,7 @@ Resources:
             - - 'http://'
               - Fn::GetAtt:
                   - notcompute
-                  - PrivateIp
+                  - first_private_address
               - ':8000/v1/waitcondition'
       interfaces:
         control: eth0
@@ -194,14 +194,14 @@ Resources:
         host:
           Fn::GetAtt:
             - notcompute
-            - PrivateIp
+            - first_private_address
       nova:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
         host:
           Fn::GetAtt:
             - notcompute
-            - PrivateIp
+            - first_private_address
         metadata-proxy: true
         service-password:
           Ref: NovaPassword
@@ -209,14 +209,14 @@ Resources:
         host:
           Fn::GetAtt:
             - notcompute
-            - PrivateIp
+            - first_private_address
         metadata_proxy_shared_secret: unset
         ovs:
           enable_tunneling: 'True'
           local_ip:
             Fn::GetAtt:
               - notcompute
-              - PrivateIp
+              - first_private_address
           public_interface: eth0
           physical_bridge: br-ex
           tenant_network_type: gre
@@ -227,7 +227,7 @@ Resources:
         host:
           Fn::GetAtt:
             - notcompute
-            - PrivateIp
+            - first_private_address
         password: guest
   notcompute:
     Type: OS::Nova::Server
