--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -71,7 +71,7 @@ Resources:
       controller-address:
         Fn::GetAtt:
           - notcompute
-          - PrivateIp
+          - first_private_address
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
@@ -92,19 +92,19 @@ Resources:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, PrivateIp ]}
+              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
               - ":8003"
         metadata_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, PrivateIp ]}
+              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
               - ":8000"
         waitcondition_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, PrivateIp ]}
+              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
               - ":8000/v1/waitcondition"
       os-collect-config:
         cfn:
