Allow customising the Nova BM architecture.
Nova BM can only run one architecture at a time, and the incubator
currently documents running sed against undercloud-vm.yaml!

Change-Id: Ib157cf405a40fa983f1df3fb3ed62d04262e3e81

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -9,6 +9,10 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
+  BaremetalArch:
+    Default: i386
+    Description: The architecture to use in Nova-BM - i386 or amd64.
+    Type: String
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -132,7 +136,8 @@ Resources:
           ram_allocation_ratio: 1.0
           reserved_host_memory_mb: 0
         baremetal:
-          arch: i386
+          arch:
+            Ref: BaremetalArch
           db: mysql://nova:unset@localhost/nova_bm
           power_manager: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
           pxe_deploy_timeout: 2400
