Replace broken usage of first_private_address
The OpenStack native OS::Nova::Server gives us the full list of
networks rather than AWS::EC2::Instance's contrived view of 'private'
and 'public'. We know we want ctlplane, and use Fn::Select to choose
that network directly. The outer Fn::Select is meant to choose the
first network every time, which may not always be correct, but is at
this point.

Change-Id: Iae54ab8d9ac8d84f4f6e2f86ac1b66aacb687473

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -90,13 +90,13 @@ Resources:
     Path: nova-compute-instance.yaml
     SubKey: Resources.NovaCompute0Config
     Parameters:
-        NovaApiHost: {"Fn::GetAtt": [notcompute, first_private_address]}
-        KeystoneHost: {"Fn::GetAtt": [notcompute, first_private_address]}
-        RabbitHost: {"Fn::GetAtt": [notcompute, first_private_address]}
-        NeutronHost: {"Fn::GetAtt": [notcompute, first_private_address]}
-        GlanceHost: {"Fn::GetAtt": [notcompute, first_private_address]}
-        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::GetAtt": [notcompute, first_private_address]}, '/nova']]}
-        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::GetAtt": [notcompute, first_private_address]}, '/neutron']]}
+        NovaApiHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
+        KeystoneHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
+        RabbitHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
+        NeutronHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
+        GlanceHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ] }
+        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ]}, '/nova']]}
+        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notcompute, networks]} ]} ]}, '/neutron']]}
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
         NeutronNetworkVLANRanges: ""
@@ -133,16 +133,24 @@ Resources:
         service-password:
           Ref: CinderPassword
       controller-address:
-        Fn::GetAtt:
-          - notcompute
-          - first_private_address
+        Fn::Select:
+         - 0
+         - Fn::Select:
+             - 'ctlplane'
+             - Fn::GetAtt:
+               - notcompute
+               - networks
       db-password: unset
       glance:
         db: mysql://glance:unset@localhost/glance
         host:
-          Fn::GetAtt:
-            - notcompute
-            - first_private_address
+          Fn::Select:
+           - 0
+           - Fn::Select:
+               - 'ctlplane'
+               - Fn::GetAtt:
+                 - notcompute
+                 - networks
         service-password:
           Ref: GlancePassword
       os-collect-config:
@@ -167,41 +175,59 @@ Resources:
           Fn::Join:
             - ''
             - - 'http://'
-              - Fn::GetAtt:
+              - Fn::Select:
+                - 'ctlplane'
+                - Fn::GetAtt:
                   - notcompute
-                  - first_private_address
+                  - networks
               - ':8003'
         metadata_server_url:
           Fn::Join:
             - ''
             - - 'http://'
-              - Fn::GetAtt:
-                  - notcompute
-                  - first_private_address
+              - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - 'ctlplane'
+                  - Fn::GetAtt:
+                    - notcompute
+                    - networks
               - ':8000'
         waitcondition_server_url:
           Fn::Join:
             - ''
             - - 'http://'
-              - Fn::GetAtt:
-                  - notcompute
-                  - first_private_address
+              - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - 'ctlplane'
+                  - Fn::GetAtt:
+                    - notcompute
+                    - networks
               - ':8000/v1/waitcondition'
       interfaces:
         control: eth0
       keystone:
         db: mysql://keystone:unset@localhost/keystone
         host:
-          Fn::GetAtt:
-            - notcompute
-            - first_private_address
+          Fn::Select:
+            - 0
+            - Fn::Select:
+              - 'ctlplane'
+              - Fn::GetAtt:
+                - notcompute
+                - networks
       nova:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
         host:
-          Fn::GetAtt:
-            - notcompute
-            - first_private_address
+          Fn::Select:
+            - 0
+            - Fn::Select:
+              - 'ctlplane'
+              - Fn::GetAtt:
+                - notcompute
+                - networks
         metadata-proxy: true
         service-password:
           Ref: NovaPassword
