--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -73,9 +73,13 @@ Resources:
       admin-token: 
         Ref: AdminToken
       controller-address:
-        Fn::GetAtt:
-          - notcompute
-          - first_private_address
+        Fn::Select:
+          - 0
+          - Fn::Select:
+            - "ctlplane"
+            - Fn::GetAtt:
+              - notcompute
+              - networks
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
@@ -96,19 +100,19 @@ Resources:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
               - ":8003"
         metadata_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
               - ":8000"
         waitcondition_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::GetAtt": [ notcompute, first_private_address ]}
+              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ notcompute, networks ]} ]}]}
               - ":8000/v1/waitcondition"
       os-collect-config:
         cfn:
