Finish correcting all OS::Nova::Server references
Some references to first_private_address were missed and some of the
Fn::Select calls were only half-completed.

Change-Id: I92a4e5e67784e5d64ec6e44ddcac55762cde81eb

--- a/nagios3.yaml
+++ b/nagios3.yaml
@@ -96,5 +96,4 @@ Resources:
         Ref: Nagios3ImageId
       InstanceType: {Ref: InstanceType}
 Outputs:
-    Nagios3Host:
-        Fn::GetAtt: [ nagios3 , first_private_address ]
+    Nagios3Host: {'Fn::Select': [ 0, {'Fn::Select': [ 'ctlplane', 'Fn::GetAtt': [ 'nagios3' , 'networks' ] ]} ]}
