--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -114,9 +114,13 @@ Resources:
         ovs_db: {Ref: NeutronDSN}
         ovs:
           local_ip:
-            Fn::GetAtt:
-              - NovaCompute0
-              - first_private_address
+            Fn::Select:
+              - 0
+              - Fn::Select:
+                - ctlplane
+                - Fn::GetAtt:
+                  - NovaCompute0
+                  - networks
           tenant_network_type: {Ref: NeutronNetworkType}
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
