--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -176,10 +176,12 @@ Resources:
             - ''
             - - 'http://'
               - Fn::Select:
-                - 'ctlplane'
-                - Fn::GetAtt:
-                  - notcompute
-                  - networks
+                - 0
+                - Fn::Select:
+                  - 'ctlplane'
+                  - Fn::GetAtt:
+                    - notcompute
+                    - networks
               - ':8003'
         metadata_server_url:
           Fn::Join:
@@ -233,16 +235,24 @@ Resources:
           Ref: NovaPassword
       neutron:
         host:
-          Fn::GetAtt:
-            - notcompute
-            - first_private_address
+          Fn::Select:
+            - 0
+            - Fn::Select:
+              - ctlplane
+              - Fn::GetAtt:
+                - notcompute
+                - networks
         metadata_proxy_shared_secret: unset
         ovs:
           enable_tunneling: 'True'
           local_ip:
-            Fn::GetAtt:
-              - notcompute
-              - first_private_address
+            Fn::Select:
+              - 0
+              - Fn::Select:
+                - ctlplane
+                - Fn::GetAtt:
+                  - notcompute
+                  - networks
           public_interface: eth0
           physical_bridge: br-ex
           tenant_network_type: gre
@@ -251,9 +261,13 @@ Resources:
           Ref: NeutronPassword
       rabbit:
         host:
-          Fn::GetAtt:
-            - notcompute
-            - first_private_address
+          Fn::Select:
+            - 0
+            - Fn::Select:
+              - ctlplane
+              - Fn::GetAtt:
+                - notcompute
+                - networks
         password: guest
   notcompute:
     Type: OS::Nova::Server
