Set NoEcho: true for parameters containing secrets
This prevents secret values being returned for stack-show.

Change-Id: I82eff26fda31511b66c6371f6ded2a5fb559f3fb
Fixes-Bug: #1226730

--- a/base.yaml
+++ b/base.yaml
@@ -7,6 +7,7 @@ Parameters:
   KeystoneAdminToken:
     Description: Admin Token needed for keystone
     Type: String
+    NoEcho: true
 Resources:
   RabbitMQ:
     Type: AWS::CloudFormation::Stack
