--- a/nagios3.yaml
+++ b/nagios3.yaml
@@ -9,6 +9,7 @@ Parameters:
     Description: Password for nagiosadmin web admin user.
     Type: String
     Default: nagiosadmin
+    NoEcho: true
   NovaHostIp:
     Description: nova ip.
     Type: String
@@ -17,6 +18,7 @@ Parameters:
     Description: nova OS_PASSWORD.
     Type: String
     Default: unset
+    NoEcho: true
   NovaOsUsername:
     Description: nova OS_USERNAME.
     Type: String
@@ -40,11 +42,13 @@ Parameters:
   Apache2SnakeoilPem:
     Description: Snakeoil PEM file.
     Type: String
+    NoEcho: true
     Default: |
       -----  BEGIN PlaceHolder...
   Apache2SnakeoilKey:
     Description: Snakeoil Key file.
     Type: String
+    NoEcho: true
     Default: |
       -----  BEGIN PlaceHolder...
   PostfixMailHostname:
