--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -8,6 +8,7 @@ Parameters:
     Default: ''
     Description: Password to use for mysqldump from Bootstrap Host
     Type: String
+    NoEcho: true
   BootstrapHost:
     Default: ''
     Description: Load mysqldump from this Host
@@ -16,10 +17,12 @@ Parameters:
     Default: ''
     Description: Root password for localhost access after bootstrap
     Type: String
+    NoEcho: true
   BootstrapSlavePassword:
     Default: ''
     Description: Password to use with BootstrapSlaveUser
     Type: String
+    NoEcho: true
   BootstrapSlaveUser:
     Default: ''
     Description: User to use for replication from bootstrap host
@@ -27,9 +30,11 @@ Parameters:
   GlanceDBPassword:
     Description: Password for connecting to glance database
     Type: String
+    NoEcho: true
   HeatDBPassword:
     Description: Password for accessing Heat database.
     Type: String
+    NoEcho: true
   InstanceType:
     Default: baremetal
     Description: Use this flavor
@@ -41,26 +46,32 @@ Parameters:
   KeystoneDBPassword:
     Description: Password for connecting to keystone
     Type: String
+    NoEcho: true
   NovaDBPassword:
     Description: Password for connecting to nova database
     Type: String
+    NoEcho: true
   NovaInterfaces:
     Default: eth0
     Type: String
   NeutronDBPassword:
     Description: Password for connecting to neutron database
     Type: String
+    NoEcho: true
   NeutronInterfaces:
     Default: eth0
     Type: String
   RabbitMQPassword:
     Description: Password for RabbitMQ
     Type: String
+    NoEcho: true
   RabbitPassword:
     Type: String
+    NoEcho: true
   ServicePassword:
     Description: admin_password for setting up auth in nova.
     Type: String
+    NoEcho: true
   notcomputeImage:
     Type: String
 Resources:
