--- a/nova-compute-group.yaml
+++ b/nova-compute-group.yaml
@@ -17,12 +17,14 @@ Parameters:
   ServicePassword:
     Description: admin_password for setting up auth in nova.
     Type: String
+    NoEcho: true
   NeutronHost:
     Type: String
   RabbitHost:
     Type: String
   RabbitPassword:
     Type: String
+    NoEcho: true
   NovaInterfaces:
     Type: String
     Default: eth0
