--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -5,6 +5,7 @@ Parameters:
     Default: unset
     Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
     Type: String
+    NoEcho: true
   KeyName: 
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
@@ -24,6 +25,7 @@ Parameters:
     Type: String
   RabbitPassword:
     Type: String
+    NoEcho: true
   NovaInterfaces:
     Type: String
     Default: eth0
@@ -39,6 +41,7 @@ Parameters:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
     Type: String
+    NoEcho: true
   GlanceHost:
     Type: String
   NovaDSN:
