--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -6,6 +6,7 @@ Parameters:
     Default: unset
     Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
     Type: String
+    NoEcho: true
   AdminToken:
     Default: unset
     Description: The keystone auth secret.
@@ -14,6 +15,7 @@ Parameters:
     Default: unset
     Description: The password for the cinder service account, used by cinder-api.
     Type: String
+    NoEcho: true
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -22,10 +24,12 @@ Parameters:
     Default: unset
     Description: The password for the glance service account, used by the glance services.
     Type: String
+    NoEcho: true
   HeatPassword:
     Default: unset
     Description: The password for the Heat service account, used by the Heat services.
     Type: String
+    NoEcho: true
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -34,6 +38,7 @@ Parameters:
     Default: unset
     Description: The password for the neutron service account, used by neutron agents.
     Type: String
+    NoEcho: true
   NovaComputeDriver:
     Default: libvirt.LibvirtDriver
     Type: String
@@ -50,6 +55,7 @@ Parameters:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
     Type: String
+    NoEcho: true
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
