--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -5,6 +5,7 @@ Parameters:
     Default: unset
     Description: The password for the keystone admin account, used for monitoring, querying neutron etc.
     Type: String
+    NoEcho: true
   AdminToken:
     Default: unset
     Description: The keystone auth secret.
@@ -21,6 +22,7 @@ Parameters:
     Default: unset
     Description: The password for the glance service account, used by the glance services.
     Type: String
+    NoEcho: true
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -29,6 +31,7 @@ Parameters:
     Default: unset
     Description: The password for the Heat service account, used by the Heat services.
     Type: String
+    NoEcho: true
   Image:
     Default: undercloud
     Type: String
@@ -36,10 +39,12 @@ Parameters:
     Default: unset
     Description: The password for the neutron service account, used by neutron agents.
     Type: String
+    NoEcho: true
   NovaPassword:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
     Type: String
+    NoEcho: true
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
