--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -128,6 +128,8 @@ Resources:
           network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
           bridge_mappings: {Ref: NeutronBridgeMappings}
           enable_tunneling: {Ref: NeutronEnableTunnelling}
+        service-password:
+          Ref: NeutronPassword
       admin-password: {Ref: AdminPassword}
       rabbit:
         host: {Ref: RabbitHost}
