Refactor test_merge.bash for multiple tests
We will be adding more tests, so make it more of a framework for that.

Also fix up minor lib.yaml formatting bug.

Change-Id: Ic0fe1679f8d62680dfd0acf215c849aa38b913da

--- a/examples/lib.yaml
+++ b/examples/lib.yaml
@@ -1,7 +1,9 @@
 Parameters:
   ImportantValue:
-  Default: a_default
-  Type: String
+    Default: a_default
+    Type: String
+  BImage:
+    Type: String
 Resources:
   GenericB:
     Type: OS::Nova::Server
