Make it possible to enable native neutron PXE.
This is used to control the dhcp_options_enabled flag in nova.conf,
needed to enable PXE orchestration (until Nova assumes all Neutron
libraries and servers support it).

Change-Id: I035a2341d829a9987eeeebdd9c22f039e69489db

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -40,6 +40,10 @@ Parameters:
     Description: The password for the neutron service account, used by neutron agents.
     Type: String
     NoEcho: true
+  NeutronNativePXE:
+    Default: ''
+    Type: String
+    Description: Set truthy to enable Neutron native PXE.
   NovaPassword:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
@@ -160,6 +164,8 @@ Resources:
           Ref: NovaPassword
       neutron:
         host: 127.0.0.1
+        native_pxe:
+          Ref: NeutronNativePXE
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
         ovs:
           dnsmasq_range: [192.0.2.25, 192.0.2.44]
