Set the undercloud host name to 'undercloud'.
This makes more sense than calling it 'ubuntu'.

Note: This will require an associated incubator change which
I will push momentarily.

Change-Id: I166b45a6ceb34635ed5ef7e29dd028f8c6a4cbe3

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -136,7 +136,7 @@ Resources:
         db: mysql://keystone:unset@localhost/keystone
         host: 127.0.0.1
       nova:
-        compute_hostname: ubuntu
+        compute_hostname: undercloud
         compute_driver: baremetal.driver.BareMetalDriver
         db: mysql://nova:unset@localhost/nova
         host: 127.0.0.1
