--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -81,6 +81,15 @@ Resources:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
+  CompletionCondition:
+    Type: AWS::CloudFormation::WaitCondition
+    DependsOn: notcompute
+    Properties:
+      Handle: {Ref: CompletionHandle}
+      Count: '1'
+      Timeout: '1800'
+  CompletionHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
   ComputeKey:
     Properties:
       UserName:
@@ -138,6 +147,8 @@ Resources:
         volume_size_mb: '5000'
         service-password:
           Ref: CinderPassword
+      completion-handle:
+        Ref: CompletionHandle
       controller-address:
         Fn::Select:
          - 0
