Make neutron public interface configurable.
Not all machines use eth0 :).

Change-Id: I2d0cfd8df46e7eda1b7db2ea5c8e84d3e970c862

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -44,6 +44,10 @@ Parameters:
     Default: ''
     Type: String
     Description: Set truthy to enable Neutron native PXE.
+  NeutronPublicInterface:
+    Default: eth0
+    Description: What interface to bridge onto br-ex for network nodes.
+    Type: String
   NovaPassword:
     Default: unset
     Description: The password for the nova service account, used by nova-api.
@@ -167,7 +171,8 @@ Resources:
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
         ovs:
           dnsmasq_range: [192.0.2.25, 192.0.2.44]
-          public_interface: eth0
+          public_interface:
+            Ref: NeutronPublicInterface
           physical_bridge: br-ctlplane
           physical_network: ctlplane
           network_vlan_ranges: ctlplane
