--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -57,6 +57,10 @@ Parameters:
     Default: stack
     Description: What username to ssh to the virtual power host with.
     Type: String
+  NeutronPublicInterface:
+    Default: eth0
+    Description: What interface to bridge onto br-ex for network nodes.
+    Type: String
   notcomputeImage:
     Type: String
     Default: overcloud-control
@@ -265,7 +269,8 @@ Resources:
                 - Fn::GetAtt:
                   - notcompute
                   - networks
-          public_interface: eth0
+          public_interface:
+            Ref: NeutronPublicInterface
           physical_bridge: br-ex
           tenant_network_type: gre
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
