Make it possible to set the public interface ip.
This is already supported by the ovs agent, but we didn't need it for
the emulated overclouds. Now we're working on bare metal, it's needed
for some deployments.

Change-Id: Ibb41c40d371e4c153a84fd09c370b158add75b81

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -61,6 +61,10 @@ Parameters:
     Default: eth0
     Description: What interface to bridge onto br-ex for network nodes.
     Type: String
+  NeutronPublicInterfaceIP:
+    Default: ''
+    Description: A custom IP address to put onto the NeutronPublicInterface.
+    Type: String
   notcomputeImage:
     Type: String
     Default: overcloud-control
@@ -143,6 +147,9 @@ Resources:
         Ref: AdminPassword
       admin-token:
         Ref: AdminToken
+      bootstack:
+        public_interface_ip:
+          Ref: NeutronPublicInterfaceIP
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
