Allow making the public interface a vlan.
In the CD overcloud we need to use a VLAN for public traffic.

Change-Id: I8d674e1ae58063d9be338023819f174d1bc028e4

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -65,6 +65,10 @@ Parameters:
     Default: ''
     Description: A custom IP address to put onto the NeutronPublicInterface.
     Type: String
+  NeutronPublicInterfaceRawDevice:
+    Default: ''
+    Description: If set, the public interface is a vlan with this device as the raw device.
+    Type: String
   notcomputeImage:
     Type: String
     Default: overcloud-control
@@ -278,6 +282,8 @@ Resources:
                   - networks
           public_interface:
             Ref: NeutronPublicInterface
+          public_interface_raw_device:
+            Ref: NeutronPublicInterfaceRawDevice
           physical_bridge: br-ex
           tenant_network_type: gre
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
