Permit overriding the default route for neutron.
The intent here is that the undercloud default route will be discard,
but the router kept for access to the metadata service, and this
specified route will be used for all other traffic.

Change-Id: Idf3f8252c4d4be30839d9d08ad7d4ce49538f04e

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -61,6 +61,10 @@ Parameters:
     Default: eth0
     Description: What interface to bridge onto br-ex for network nodes.
     Type: String
+  NeutronPublicInterfaceDefaultRoute:
+    Default: ''
+    Description: A custom default route for the NeutronPublicInterface.
+    Type: String
   NeutronPublicInterfaceIP:
     Default: ''
     Description: A custom IP address to put onto the NeutronPublicInterface.
@@ -284,6 +288,8 @@ Resources:
             Ref: NeutronPublicInterface
           public_interface_raw_device:
             Ref: NeutronPublicInterfaceRawDevice
+          public_interface_route:
+            Ref: NeutronPublicInterfaceDefaultRoute
           physical_bridge: br-ex
           tenant_network_type: gre
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
