Add tuskar API service configuration
Needed for I1d16e535ae50a06a8792e1613bb6b6c4647bf128 to
work properly.

Change-Id: Ib66e688bd7500f03dea7d4282607cd51078e9a51

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -84,6 +84,7 @@ Resources:
       ImageId: '0'
       InstanceType: foo
     Metadata:
+      OpenStack::Role: notcomputeConfig
       OpenStack::Heat::Stack: {}
       Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password:
