Add parameters for undercloud power_managers.
Adds a new PowerManager parameter for the baremetal power
management driver.

Change-Id: I3d3b1f8e190d9de9705b2319726cdddb5624fc83

--- a/undercloud-bm.yaml
+++ b/undercloud-bm.yaml
@@ -53,6 +53,10 @@ Parameters:
     Description: The password for the nova service account, used by nova-api.
     Type: String
     NoEcho: true
+  PowerManager:
+    Default: nova.virt.baremetal.ipmi.IPMI
+    Description: Bare metal power manager driver.
+    Type: String
 Resources:
   AccessPolicy:
     Properties:
@@ -150,7 +154,8 @@ Resources:
           arch:
             Ref: BaremetalArch
           db: mysql://nova:unset@localhost/nova_bm
-          power_manager: nova.virt.baremetal.ipmi.IPMI
+          power_manager:
+            Ref: PowerManager
           pxe_deploy_timeout: 2400
         service-password:
           Ref: NovaPassword
