--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -53,6 +53,10 @@ Parameters:
     Description: The password for the nova service account, used by nova-api.
     Type: String
     NoEcho: true
+  PowerManager:
+    Default: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
+    Description: Bare metal power manager driver.
+    Type: String
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
@@ -154,7 +158,8 @@ Resources:
           arch:
             Ref: BaremetalArch
           db: mysql://nova:unset@localhost/nova_bm
-          power_manager: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
+          power_manager:
+            Ref: PowerManager
           pxe_deploy_timeout: 2400
           virtual_power:
             user:
