Add metadata for the nova floating-ips extension.
Nova defaults to trying to allocate floating ips from a neutron
network called 'nova' but we called our external one ext-net (which
various Neutron documentation uses), so we need to override it or the
nova floating-ips extension isn't usable [without explicitly setting a
pool in the API calls].

Partial-Bug: #1239450
Change-Id: I1ef78642bdc1f19d25422961350e4f02a8f6c16f

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -284,6 +284,8 @@ Resources:
       nova:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
+        default_floating_pool:
+          ext-net
         host:
           Fn::Select:
             - 0
