Hide the AdminToken too.
This is arguably more important than passwords as it allow rooting
keystone :).

Change-Id: I12d8ae0f096480112a82d7598eedae64a6fbd861

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -11,6 +11,7 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
+    NoEcho: true
   CinderPassword:
     Default: unset
     Description: The password for the cinder service account, used by cinder-api.
