--- a/undercloud-bm.yaml
+++ b/undercloud-bm.yaml
@@ -10,6 +10,7 @@ Parameters:
     Default: unset
     Description: The keystone auth secret.
     Type: String
+    NoEcho: true
   BaremetalArch:
     Default: i386
     Description: The architecture to use in Nova-BM - i386 or amd64.
