Add KeystoneURL to Outputs section
Having the KeystoneURL accessible in Heat allows the user to access the
overcloud services using the service catalog.

Change-Id: Ie6ef1aadf2f027d0b0793fea59385832c9f0c25f

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -329,3 +329,14 @@ Resources:
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
+Outputs:
+  KeystoneURL:
+    Description: URL for the Overcloud Keystone service
+    Value:
+      Fn::Select:
+        - 0
+        - Fn::Select:
+          - ctlplane
+          - Fn::GetAtt:
+            - notcompute
+            - networks
