--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -194,7 +194,7 @@ Resources:
         admin_user: heat
         auth_encryption_key: unset___________
         db: mysql://heat:unset@localhost/heat
-        heat_watch_server_url:
+        watch_server_url:
           Fn::Join:
             - ''
             - - 'http://'
