--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -333,10 +333,14 @@ Outputs:
   KeystoneURL:
     Description: URL for the Overcloud Keystone service
     Value:
-      Fn::Select:
-        - 0
+      Fn::Join:
+      - ''
+      - - http://
         - Fn::Select:
-          - ctlplane
-          - Fn::GetAtt:
-            - notcompute
-            - networks
+          - 0
+          - Fn::Select:
+            - ctlplane
+            - Fn::GetAtt:
+              - notcompute
+              - networks
+        - :5000/v2.0/
