Add metadata to configure swift
o Adds the required swift metadata (in swift-source.yaml).
o Sets up glance to use the swift backend on the overcloud.
o Sets up glance to use the file backend on the undercloud and seed,
  i.e. maintain the Status quo.

Change-Id: I4a70ffbf9c51f1fea5cfc84d8718d3d30d36b3f2

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -176,6 +176,7 @@ Resources:
                - networks
       db-password: unset
       glance:
+        backend: swift
         db: mysql://glance:unset@localhost/glance
         host:
           Fn::Select:
@@ -186,6 +187,9 @@ Resources:
                  - notcompute
                  - networks
         service-password:
+          Ref: GlancePassword
+        swift-store-user: service:glance
+        swift-store-key:
           Ref: GlancePassword
       heat:
         admin_password:
