--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -100,6 +100,7 @@ Resources:
         volume_size_mb: '5000'
       db-password: unset
       glance:
+        backend: file
         db: mysql://glance:unset@localhost/glance
         host: 127.0.0.1
         service-password:
